--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.17",
+    "cheerio": "^1.2.0",
     "csv-parse": "^6.1.0",
     "jsdom": "^28.0.0",
     "postcss": "^8.4.33",
